--- a/website/src/components/widgets/Content.astro
+++ b/website/src/components/widgets/Content.astro
@@ -91,7 +91,7 @@ const {
                 <Fragment set:html={image} />
               ) : (
                 <Picture
-                  class="mx-auto w-full rounded-lg bg-gray-500 shadow-lg"
+                  class="mx-auto w-full rounded-lg"
                   width={500}
                   height={500}
                   widths={[400, 768]}
