--- a/website/src/components/widgets/Steps.astro
+++ b/website/src/components/widgets/Steps.astro
@@ -61,10 +61,10 @@ const {
             <Fragment set:html={image} />
           ) : (
             <Picture
-              class="inset-0 object-cover object-top w-full rounded-md shadow-lg md:absolute md:h-full bg-gray-400 dark:bg-slate-700"
+              class="inset-0 object-fit object-top w-full rounded-md md:absolute md:h-full"
               widths={[400, 768]}
               sizes="(max-width: 768px) 100vw, 432px"
-              aspectRatio="1616:1414"
+              aspectRatio="960:960"
               width={432}
               height={768}
               {...image}
