--- a/website/src/components/widgets/Steps.astro
+++ b/website/src/components/widgets/Steps.astro
@@ -61,7 +61,7 @@ const {
             <Fragment set:html={image} />
           ) : (
             <Picture
-              class="inset-0 object-fit object-top w-full rounded-md md:absolute md:h-full"
+              class="bg-white flex justify-center inset-0 object-fit object-top w-full rounded-md md:absolute md:h-full"
               widths={[400, 768]}
               sizes="(max-width: 768px) 100vw, 432px"
               aspectRatio="960:960"
