--- a/website/src/layouts/DocLayout.astro
+++ b/website/src/layouts/DocLayout.astro
@@ -43,12 +43,12 @@ const meta = {
   <main>
     <div class="bg-slate-100">
       <div class="grid grid-cols-12">
-        <div class="col-span-3 top-0 pt-12 flex">
+        <div class="col-span-3 top-0 flex">
           <div class="ml-auto">
             <LeftSidebar currentPage={currentPage} />
           </div>
         </div>
-        <main class="py-4 px-8 pb-32 col-span-6 h-screen  overflow-auto">
+        <main class="py-4 px-8 pb-32 col-span-6 overflow-auto">
           <div>
             <PageContent>
               <slot />
