--- a/website/src/components/widgets/Header.astro
+++ b/website/src/components/widgets/Header.astro
@@ -40,13 +40,7 @@ const {
 } = Astro.props;
 ---
 
-<header
-  class:list={[
-    { sticky: isSticky, relative: !isSticky },
-    'top-0 z-40 flex-none mx-auto w-full transition-all ease-in duration-100',
-  ]}
-  id="header"
->
+<header class="sticky top-0 z-40 flex-none mx-auto w-full bg-light dark:text-slate-300 border-b border-gray-200 dark:border-slate-800 dark:bg-dark">
   <div class="py-3 px-3 md:py-3.5 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl">
     <div class:list={[{"mr-auto": position === "right"}, "flex justify-between"]}>
       <a class="flex items-center" href={getHomePermalink()}>
