--- a/packages/core/src/components/scrshot-area/scrshot-area.css
+++ b/packages/core/src/components/scrshot-area/scrshot-area.css
@@ -7,6 +7,7 @@
   position: relative;
   z-index: 2147483647;
   background: #fff;
+  overflow: hidden;
 }
 
 .backdrop {
@@ -17,6 +18,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  backdrop-filter: blur(3px);
 }
 
 .measure {
@@ -39,4 +41,14 @@
 
 .measure.debug {
   display: inline-flex;
+}
+
+@media (prefers-color-scheme: dark) {
+  .debug {
+    background: #000;
+  }
+
+  .backdrop {
+    background: rgba(255, 255, 255, 0.6);
+  }
 }
