--- a/packages/core/src/components/scrshot-debug/scrshot-debug.css
+++ b/packages/core/src/components/scrshot-debug/scrshot-debug.css
@@ -15,6 +15,7 @@
   border-radius: 12px;
   border: 1px solid #ccc;
   background: #fff;
+  color: #000;
 }
 
 .off {
@@ -27,4 +28,12 @@
 
 .hide {
   display: none;
+}
+
+@media (prefers-color-scheme: dark) {
+  .button {
+    background: #000;
+    color: #fff;
+    /* border-color: #e5e7eb; */
+  }
 }
