fix: fix building packages process

--- a/packages/core/src/components/scrshot-mark/scrshot-mark.css
+++ b/packages/core/src/components/scrshot-mark/scrshot-mark.css
@@ -12,7 +12,7 @@
 }
 
 .arrow {
-  visibility: hidden;
+  visibility: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -20,7 +20,7 @@
 }
 
 .arrow.show {
-  visibility: initial;
+  visibility: block;
 }
 
 .position-top {
