docs: add installation guide

--- a/website/src/components/docs/LeftSidebar.astro
+++ b/website/src/components/docs/LeftSidebar.astro
@@ -4,7 +4,7 @@
 export const SIDEBAR = [
 	{ text: "Getting Started", header: true },
 	{ text: "Introduction", link: "/docs" },
-  { text: "Installation", link: "/docs/cli/installation" },
+  { text: "Installation", link: "/docs/installation" },
 
   { text: "CLI", header: true },
 	{ text: "Introduction", link: "/docs/cli/introduction" },
