docs: comment out lm payment links

--- a/website/src/components/widgets/Hero.astro
+++ b/website/src/components/widgets/Hero.astro
@@ -84,7 +84,7 @@ const {
         {content && <Fragment set:html={content} />}
       </div>
       <div>
-        <div class="relative m-auto max-w-5xl p-4 border border-solid border-gray-200 rounded-lg bg-gradient-to-r from-slate-100 to-gray-50">
+        <div class="w-full aspect-ratio-1/1 relative m-auto max-w-5xl p-4 border border-solid border-gray-200 rounded-lg bg-gradient-to-r from-slate-100 to-gray-50">
           <video src="/homepage.mp4" muted autoplay loop class="border border-solid border-gray-300 rounded-md" />
         </div>
       </div>
