--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -24,7 +24,11 @@ const meta = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    callToAction={{ text: 'Preorder', href: 'https://scrshot.lemonsqueezy.com/checkout/buy/19711312-9868-4e9d-8401-e1012bdfc7b6', icon: 'tabler:shopping-cart' }}
+    callToAction={{ 
+      text: 'Preorder', 
+      href: "#",
+      //href: 'https://scrshot.lemonsqueezy.com/checkout/buy/19711312-9868-4e9d-8401-e1012bdfc7b6', 
+      icon: 'tabler:shopping-cart' }}
     callToAction2={{ text: 'Learn more', href: '#features' }}
   >
     <Fragment slot="title">
@@ -251,7 +255,7 @@ const meta = {
 
   <!-- FAQs Widget ******************* -->
 
-  <FAQs
+  <!-- <FAQs
     title="Frequently Asked Questions"
     subtitle="You probably have some questions. Let me answer them brefiely."
     highlight="FAQs"
@@ -291,7 +295,7 @@ const meta = {
         },
       ],
     ]}
-  />
+  /> -->
 
   <!-- Stats Widget ****************** -->
 
@@ -309,7 +313,8 @@ const meta = {
   <CallToAction
     callToAction={{
       text: 'Buy preorder',
-      href: 'https://scrshot.lemonsqueezy.com/checkout/buy/19711312-9868-4e9d-8401-e1012bdfc7b6',
+      href: "#",
+      // href: 'https://scrshot.lemonsqueezy.com/checkout/buy/19711312-9868-4e9d-8401-e1012bdfc7b6',
       icon: 'tabler:shopping-cart',
     }}
   >
