docs: update favicon

--- a/website/src/components/common/MetaTags.astro
+++ b/website/src/components/common/MetaTags.astro
@@ -92,7 +92,8 @@ const image =
 
 {SITE.splitbeeAnalytics?.enabled && <SplitbeeAnalytics {...SITE.splitbeeAnalytics} />}
 
-<link rel="shortcut icon" href={getAsset('/favicon.ico')} />
-<link rel="icon" type="image/svg+xml" href={getAsset('/favicon.svg')} />
-<link rel="mask-icon" href={getAsset('/favicon.svg')} color="#8D46E7" />
+<link rel="shortcut icon" href={getAsset('/favicon/favicon.ico')} />
+<link rel="apple-touch-icon" sizes="180x180" href={getAsset('/favicon/apple-touch-icon.png')}>
+<link rel="icon" type="image/png" sizes="32x32" href={getAsset('/favicon/favicon-32x32.png')}>
+<link rel="icon" type="image/png" sizes="16x16" href={getAsset('/favicon/favicon-16x16.png')}>
 <link rel="sitemap" href={getAsset('/sitemap-index.xml')} />
