--- a/website/src/components/common/MetaTags.astro
+++ b/website/src/components/common/MetaTags.astro
@@ -1,6 +1,6 @@
 ---
 import { AstroSeo } from '@astrolib/seo';
-import { GoogleAnalytics } from '@astrolib/analytics';
+// import { GoogleAnalytics } from '@astrolib/analytics';
 import { getImage } from '@astrojs/image';
 
 import { SITE } from '~/config.mjs';
@@ -9,7 +9,7 @@ import { getCanonical, getAsset } from '~/utils/permalinks';
 import { getRelativeUrlByFilePath } from '~/utils/directories';
 
 import CustomStyles from '~/components/CustomStyles.astro';
-import SplitbeeAnalytics from './SplitbeeAnalytics.astro';
+// import SplitbeeAnalytics from './SplitbeeAnalytics.astro';
 
 export interface Props extends MetaSEO {
   dontUseTitleTemplate?: boolean;
@@ -65,14 +65,12 @@ const image =
     title: ogTitle,
     description: description,
     type: ogType,
-    images: image
-      ? [
+    images: [
           {
-            url: image.toString(),
+            url: SITE.origin + '/og.png',
             alt: ogTitle,
           },
         ]
-      : undefined,
     // site_name: 'SiteName',
   }}
   twitter={{
@@ -85,12 +83,12 @@ const image =
 <CustomStyles />
 
 <!-- Google Site Verification -->
-{SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />}
+<!-- {SITE.googleSiteVerificationId && <meta name="google-site-verification" content={SITE.googleSiteVerificationId} />} -->
 
 <!-- Google Analytics -->
-{SITE.googleAnalyticsId && <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />}
+<!-- {SITE.googleAnalyticsId && <GoogleAnalytics id={String(SITE.googleAnalyticsId)} partytown={true} />} -->
 
-{SITE.splitbeeAnalytics?.enabled && <SplitbeeAnalytics {...SITE.splitbeeAnalytics} />}
+<!-- {SITE.splitbeeAnalytics?.enabled && <SplitbeeAnalytics {...SITE.splitbeeAnalytics} />} -->
 
 <link rel="shortcut icon" href={getAsset('/favicon/favicon.ico')} />
 <link rel="apple-touch-icon" sizes="180x180" href={getAsset('/favicon/apple-touch-icon.png')}>
